WebCore/platform/ScrollView.cpp
@@ -50,7 +50,7 @@ ScrollView::ScrollView()
 {
     platformInit();
     if (platformWidget())
-        platformSetCanBlitOnScroll();
+        platformSetCanBlitOnScroll(true);
 }
 
 ScrollView::~ScrollView()
@@ -147,11 +147,20 @@ void ScrollView::setCanHaveScrollbars(bool canScroll)
 
 void ScrollView::setCanBlitOnScroll(bool b)
 {
-    if (m_canBlitOnScroll == b)
+    if (platformWidget()) {
+        platformSetCanBlitOnScroll(b);
         return;
+    }
+
     m_canBlitOnScroll = b;
+}
+
+bool ScrollView::canBlitOnScroll() const
+{
     if (platformWidget())
-        platformSetCanBlitOnScroll();
+        return platformCanBlitOnScroll();
+
+    return m_canBlitOnScroll;
 }
 
 IntRect ScrollView::visibleContentRect(bool includeScrollbars) const
@@ -777,10 +786,6 @@ void ScrollView::platformRemoveChild(Widget*)
 #endif
 
 #if !PLATFORM(MAC)
-void ScrollView::platformSetCanBlitOnScroll()
-{
-}
-
 void ScrollView::platformSetScrollbarsSuppressed(bool repaintOnUnsuppress)
 {
 }
@@ -793,6 +798,15 @@ void ScrollView::platformSetScrollbarModes()
 
 void ScrollView::platformScrollbarModes(ScrollbarMode& horizontal, ScrollbarMode& vertical) const
 {
+}
+
+void ScrollView::platformSetCanBlitOnScroll(bool)
+{
+}
+
+bool ScrollView::platformCanBlitOnScroll() const
+{
+    return false;
 }
 
 IntRect ScrollView::platformVisibleContentRect(bool) const
